<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:stretchColumns="0,1" >

        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prop" />

            <EditText
                android:id="@+id/prop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="true"
                android:contentDescription="Property ID" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dist" />

            <EditText
                android:id="@+id/dist"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="true"
                android:contentDescription="Distributor ID" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/uid" />

            <EditText
                android:id="@+id/uid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="true"
                android:contentDescription="User ID" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/persistent" />

            <EditText
                android:id="@+id/persistent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="true"
                android:contentDescription="Persistent ID" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reset" />
        
        <Button
            android:id="@+id/reset_uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reset_uid" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/clear" />
    </TableLayout>

</ScrollView>